@@ -24,6 +24,7 @@ Release 0.1.3 - Unreleased
    HBASE-686   MemcacheScanner didn't return the first row(if it exists),
                because HScannerInterface's output incorrect (LN via Jim Kellerman)
    HBASE-613   Timestamp-anchored scanning fails to find all records
+   HBASE-709   Deadlock while rolling WAL-log while finishing flush
 
 Release 0.1.2 - 05/13/2008
 
